--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/jobLog.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/jobLog.html
@@ -87,6 +87,10 @@
 		            field: 'jobDesc',
 		            title: '任务名称'
 		        },
+					{
+                        field: 'executorAddress',
+                        title: '执行地址'
+                    },
 				{
 					field: 'triggerTime',
 					title: '调度时间'
@@ -97,7 +101,7 @@
 		        },
 		        {
 		            field: 'costHandleTime',
-		            title: '执行耗时'
+		            title: '耗时'
 		        },
 				{
 		            field: 'handleCode',
