--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/job.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/job.html
@@ -93,13 +93,13 @@
 		        },
 		        {
 		            field: 'jobGroup',
-		            title: '任务执行器',
+		            title: '任务组',
 		            formatter: function(v, row, index) {
-		                var r = "";
+		                var r = "-";
 		                if(groupList != null)
 							$.each(groupList, function (index, g) {
 								if (g.groupId == v) {
-									r = g.appName;
+									r = g.groupName;
 								}
 							});
                         return r;
