--- a/sofa-admin/sofa-admin-bootstrap/src/main/resources/templates/error/unauth.html
+++ b/sofa-admin/sofa-admin-bootstrap/src/main/resources/templates/error/unauth.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RuoYi - 403</title>
+    <title>403</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/css/animate.css" rel="stylesheet"/>
     <link href="/css/style.css" rel="stylesheet"/>
@@ -15,7 +15,6 @@
 
     <div class="error-desc">
         对不起，您没有访问权限，请不要进行非法操作！您可以返回主页面
-        <a href="javascript:top.document.location.href='/'" class="btn btn-outline btn-primary btn-xs">返回主页</a>
     </div>
 </div>
 </body>
