--- a/sofa-admin/sofa-admin-bootstrap/src/main/resources/templates/error/500.html
+++ b/sofa-admin/sofa-admin-bootstrap/src/main/resources/templates/error/500.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RuoYi - 500</title>
+    <title>500</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/css/animate.css" rel="stylesheet"/>
     <link href="/css/style.css" rel="stylesheet"/>
@@ -14,8 +14,10 @@
     <h3 class="font-bold">内部服务器错误！</h3>
 
     <div class="error-desc">
-        服务器遇到意外事件，不允许完成请求。我们抱歉。您可以返回主页面。
+        服务器遇到意外事件，不允许完成请求。请联系管理员。
+<!--
         <a href="javascript:top.document.location.href='/'" class="btn btn-primary m-t">主页</a>
+-->
     </div>
 </div>
 </body>
