--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/add.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/add.html
@@ -29,12 +29,12 @@
 
 			</div>-->
 			<div class="form-group">
-				<label class="col-sm-2 control-label">运行模式</label>
+				<!--<label class="col-sm-2 control-label">运行模式</label>
 				<div class="col-sm-4">
 					<select name="glueType" class="form-control m-b" th:with="type=${@dict.getType('sys_job_run_mode')}">
 						<option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}" ></option>
 					</select>
-				</div>
+				</div>-->
 				<label class="col-sm-2 control-label">Cron表达式</label>
 				<div class="col-sm-4"><input type="text" class="form-control" id="jobCron" name="jobCron"></div>
 			</div>
