--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/edit.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/edit.html
@@ -21,12 +21,12 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="col-sm-2 control-label">运行模式</label>
+					<!--<label class="col-sm-2 control-label">运行模式</label>
 					<div class="col-sm-4">
 						<select name="glueType" class="form-control m-b" th:with="type=${@dict.getType('sys_job_run_mode')}" disabled="true">
 							<option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}" th:field="*{glueType}"></option>
 						</select>
-					</div>
+					</div>-->
 					<label class="col-sm-2 control-label">Cron表达式</label>
 					<div class="col-sm-4"><input type="text" class="form-control" id="jobCron" name="jobCron"  th:field="*{jobCron}" ></div>
 
