--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/job.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/job.html
@@ -92,7 +92,7 @@
 		            title: '任务名称',
 		        },
 		        {
-		            field: 'jobGroup',
+		            field: 'jobGroupId',
 		            title: '任务组',
 		            formatter: function(v, row, index) {
 		                var r = "-";
