--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/jobLog.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/jobLog.html
@@ -87,7 +87,15 @@
 		            field: 'jobDesc',
 		            title: '任务名称'
 		        },
-					{
+                    {
+                        field: 'blockStrategy',
+                        title: '阻塞策略'
+                    },
+                    {
+                        field: 'triggerType',
+                        title: '触发类型'
+                    },
+                    {
                         field: 'executorAddress',
                         title: '执行地址'
                     },
