--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/group/add.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/group/add.html
@@ -7,7 +7,7 @@
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-job-group-add">
 			<div class="form-group">
-				<label class="col-sm-3 control-label">执行器名称：</label>
+				<label class="col-sm-3 control-label">分组名称：</label>
 				<div class="col-sm-8">
 					<input class="form-control" type="text" name="groupName" id="groupName" required>
 				</div>
