--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/group/edit.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/group/edit.html
@@ -8,7 +8,7 @@
 		<form class="form-horizontal m" id="form-job-group-edit" th:object="${group}">
 			<input id="groupId" name="groupId" type="hidden" th:field="*{groupId}"/>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">执行器名称：</label>
+				<label class="col-sm-3 control-label">分组名称：</label>
 				<div class="col-sm-8">
 					<input class="form-control" type="text" name="groupName" id="groupName" th:field="*{groupName}" required>
 				</div>
