--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/group/group.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/group/group.html
@@ -11,7 +11,7 @@
 					<div class="select-list">
 						<ul>
 							<li>
-								执行器名称：<input type="text" name="groupName"/>
+								分组名称：<input type="text" name="groupName"/>
 							</li>
 							<li>
 								<a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
@@ -23,13 +23,13 @@
 			</div>
 			
 			<div class="btn-group-sm" id="toolbar" role="group">
-				<a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="monitor:job:group:add">
+				<a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="ext:job:group:add">
 	                <i class="fa fa-plus"></i> 新增
 	            </a>
-	            <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="monitor:job:group:edit">
+	            <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="ext:job:group:edit">
 		            <i class="fa fa-edit"></i> 修改
 		        </a>
-				<a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="monitor:job:group:remove">
+				<a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="ext:job:group:remove">
 		            <i class="fa fa-remove"></i> 删除
 		        </a>
 	        </div>
@@ -41,11 +41,9 @@
 	</div>
 	<th:block th:include="include :: footer" />
 	<script th:inline="javascript">
-        var detailFlag = [[${@permission.hasPermi('monitor:job:group:view')}]];
-		var editFlag = [[${@permission.hasPermi('monitor:job:group:edit')}]];
-		var removeFlag = [[${@permission.hasPermi('monitor:job:group:remove')}]];
-		var statusFlag = [[${@permission.hasPermi('monitor:job:group:changeStatus')}]];
-		var regStatus = [[${@dict.getType('sys_job_address_type')}]];
+        var detailFlag = [[${@permission.hasPermi('ext:job:group:view')}]];
+		var editFlag = [[${@permission.hasPermi('ext:job:group:edit')}]];
+		var removeFlag = [[${@permission.hasPermi('ext:job:group:remove')}]];
 		var prefix = ctx + "monitor/djob/group";
 
 		$(function() {
@@ -67,19 +65,15 @@
 		        },
 		        {
 		            field: 'groupName',
-		            title: '执行器名称',
-		        },
-		        {
-		            field: 'registryList',
-		            title: '在线机器列表'
+		            title: '分组名称',
 		        },
 		        {
 		            title: '操作',
 		            align: 'center',
 		            formatter: function(value, row, index) {
 		                var actions = [];
-		                actions.push('<a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.groupId + '\')"><i class="fa fa-edit"></i> 修改</a> ');
-		                actions.push('<a class="btn btn-warning btn-xs" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.groupId + '\')"><i class="fa fa-remove"></i>删除</a> ');
+		                actions.push('<a class="btn btn-primary btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.groupId + '\')"><i class="fa fa-edit"></i> 修改</a> ');
+		                actions.push('<a class="btn btn-warning btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.groupId + '\')"><i class="fa fa-remove"></i>删除</a> ');
 		                return actions.join('');
 		            }
 		        }]
