--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/job.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/job.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
-	<th:block th:include="include :: header('分布式定时任务列表')" />
+	<th:block th:include="include :: header('任务列表')" />
 </head>
 <body class="gray-bg">
 	<div class="container-div">
@@ -35,22 +35,22 @@
 			</div>
 			
 			<div class="btn-group-sm" id="toolbar" role="group">
-				<a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="monitor:job:add">
+				<a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="ext:job:add">
 	                <i class="fa fa-plus"></i> 新增
 	            </a>
-	            <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="monitor:job:edit">
+	            <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="ext:job:edit">
 		            <i class="fa fa-edit"></i> 修改
 		        </a>
-				<a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="monitor:job:remove">
+				<a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="ext:job:remove">
 		            <i class="fa fa-remove"></i> 删除
 		        </a>
-				<a class="btn btn-primary single disabled" onclick="start()" shiro:hasPermission="monitor:job:edit">
+				<a class="btn btn-primary single disabled" onclick="start()" shiro:hasPermission="ext:job:operate">
 					<i class="fa fa-edit"></i> 启用
 				</a>
-				<a class="btn btn-danger single disabled" onclick="stop()" shiro:hasPermission="monitor:job:edit">
+				<a class="btn btn-danger single disabled" onclick="stop()" shiro:hasPermission="ext:job:operate">
 					<i class="fa fa-edit"></i> 停用
 				</a>
-				<a class="btn btn-primary single disabled" onclick="trigger()" shiro:hasPermission="monitor:job:edit">
+				<a class="btn btn-primary single disabled" onclick="trigger()" shiro:hasPermission="ext:job:operate">
 					<i class="fa fa-edit"></i> 执行一次
 				</a>
 	        </div>
@@ -62,10 +62,12 @@
 	</div>
 	<th:block th:include="include :: footer" />
 	<script th:inline="javascript">
-        var detailFlag = [[${@permission.hasPermi('monitor:job:detail')}]];
-		var editFlag = [[${@permission.hasPermi('monitor:job:edit')}]];
-		var removeFlag = [[${@permission.hasPermi('monitor:job:remove')}]];
-		var statusFlag = [[${@permission.hasPermi('monitor:job:changeStatus')}]];
+        var viewFlag = [[${@permission.hasPermi('ext:job:view')}]];
+		var editFlag = [[${@permission.hasPermi('ext:job:edit')}]];
+		var removeFlag = [[${@permission.hasPermi('ext:job:remove')}]];
+		var operateFlag = [[${@permission.hasPermi('ext:job:operate')}]];
+		var codeFlag = [[${@permission.hasPermi('ext:job:code:view')}]];
+		var logFlag = [[${@permission.hasPermi('ext:job:log:view')}]];
 		var groupList = [[${groupList}]];
 		var prefix = ctx + "monitor/djob";
 
@@ -135,10 +137,10 @@
 		            align: 'center',
 		            formatter: function(value, row, index) {
 		                var actions = [];
-                        actions.push('<a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.jobId + '\')"><i class="fa fa-edit"></i> 修改</a> ');
-                        actions.push('<a class="btn btn-warning btn-xs" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.jobId + '\')"><i class="fa fa-remove"></i>删除</a> ');
-                        actions.push('<a class="btn btn-warning btn-xs" href="javascript:void(0)" onclick="editCode(\'' + row.jobId + '\')"><i class="fa fa-edit"></i>脚本</a> ');
-                        actions.push('<a class="btn btn-info btn-xs" href="javascript:void(0)" onclick="openlog(\'' + row.jobId + '\')"><i class="fa fa-list-ul"></i>日志</a> ');
+                        actions.push('<a class="btn btn-primary btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.jobId + '\')"><i class="fa fa-edit"></i> 修改</a> ');
+                        actions.push('<a class="btn btn-warning btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.jobId + '\')"><i class="fa fa-remove"></i>删除</a> ');
+                        actions.push('<a class="btn btn-warning btn-xs ' + codeFlag + '" href="javascript:void(0)" onclick="editCode(\'' + row.jobId + '\')"><i class="fa fa-edit"></i>脚本</a> ');
+                        actions.push('<a class="btn btn-info btn-xs ' + logFlag + '" href="javascript:void(0)" onclick="openlog(\'' + row.jobId + '\')"><i class="fa fa-list-ul"></i>日志</a> ');
 /*
                         actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="javascript:void(0)" onclick="$.operate.detail(\'' + row.jobId + '\')"><i class="fa fa-search"></i>详细</a> ');
 */
@@ -151,6 +153,13 @@
 
         /* 状态显示 */
         function statusTools(row) {
+            if(operateFlag){
+                if (row.triggerStatus == 0) {
+                    return '<i class=\"fa fa-toggle-on text-info fa-2x\"></i>';
+                } else {
+                    return '<i class=\"fa fa-toggle-off text-info fa-2x\"></i>';
+                }
+			}
             if (row.triggerStatus == 0) {
                 return '<i class=\"fa fa-toggle-on text-info fa-2x\" onclick="stop1(\'' + row.jobId + '\')"></i> ';
             } else {
