--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/jobLog.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/monitor/djob/jobLog.html
@@ -48,7 +48,7 @@
 				<a class="btn btn-danger" onclick="clearLog(null,9)" shiro:hasPermission="ext:job:log:clean">
 					<i class="fa fa-remove"></i> 清理所有日志
 				</a>
-	            <a class="btn btn-danger multiple disabled" onclick="clearSelected()" shiro:hasPermission="ext:job:clean:clean">
+	            <a class="btn btn-danger multiple disabled" onclick="clearSelected()" shiro:hasPermission="ext:job:log:clean">
 	                <i class="fa fa-trash"></i> 删除选中日志
 	            </a>
 				<a class="btn btn-danger single disabled" onclick="kill()" shiro:hasPermission="ext:job:operate">
