--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/add.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/add.html
@@ -79,7 +79,7 @@
 	</div>
 	<th:block th:include="include :: footer" />
 	<script type="text/javascript">
-		var prefix = ctx + "monitor/djob";
+		var prefix = ctx + "ext/djob";
 
 		$("#form-job-add").validate({
 			onkeyup: false,
