--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/edit.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/edit.html
@@ -92,7 +92,7 @@
 	</div>
 	<th:block th:include="include :: footer" />
 	<script type="text/javascript">
-        var prefix = ctx + "monitor/djob";
+        var prefix = ctx + "ext/djob";
 	
 		$("#form-job-edit").validate({
 			onkeyup: false,
