--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/group/add.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/group/add.html
@@ -44,7 +44,7 @@
 	</div>
 	<th:block th:include="include :: footer" />
 	<script type="text/javascript">
-		var prefix = ctx + "monitor/djob/group";
+		var prefix = ctx + "ext/djob/group";
 		
 		function submitHandler() {
 	        if ($.validate.form()) {
