--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/group/group.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/group/group.html
@@ -44,7 +44,7 @@
         var detailFlag = [[${@permission.hasPermi('ext:job:group:view')}]];
 		var editFlag = [[${@permission.hasPermi('ext:job:group:edit')}]];
 		var removeFlag = [[${@permission.hasPermi('ext:job:group:remove')}]];
-		var prefix = ctx + "monitor/djob/group";
+		var prefix = ctx + "ext/djob/group";
 
 		$(function() {
 		    var options = {
