--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/job.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/job.html
@@ -69,7 +69,7 @@
 		var codeFlag = [[${@permission.hasPermi('ext:job:code:view')}]];
 		var logFlag = [[${@permission.hasPermi('ext:job:log:view')}]];
 		var groupList = [[${groupList}]];
-		var prefix = ctx + "monitor/djob";
+		var prefix = ctx + "ext/djob";
 
 		$(function() {
 		    var options = {
