--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/jobLogDetail.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/jobLogDetail.html
@@ -69,7 +69,7 @@
 <th:block th:include="include :: footer" />
 
 <script>
-    var prefix = ctx + "monitor/djob";
+    var prefix = ctx + "ext/djob";
     // 参数
     var triggerCode = '[[${jobLog.triggerCode}]]';
     var handleCode = '[[${jobLog.handleCode}]]';
