--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/jobCode.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/jobCode.html
@@ -178,7 +178,7 @@
 <script>
     var id = '[[${jobId}]]';
     var ideMode = "text/x-java";
-    var prefix = ctx + "monitor/djob";
+    var prefix = ctx + "ext/djob";
 
     $(function() {
 
