--- a/sofa-admin/sofa-admin-bootstrap/src/main/resources/templates/system/user/user.html
+++ b/sofa-admin/sofa-admin-bootstrap/src/main/resources/templates/system/user/user.html
@@ -118,8 +118,8 @@
             exportUrl: prefix + "/export",
             importUrl: prefix + "/importData",
             importTemplateUrl: prefix + "/importTemplate",
-            sortName: "updateTime",
-            sortOrder: "desc",
+            sortName: "loginName",
+            sortOrder: "asc",
             modalName: "用户",
             columns: [{
                 checkbox: true
