--- a/sofa-admin/sofa-admin-bootstrap/src/main/resources/templates/system/dept/tree.html
+++ b/sofa-admin/sofa-admin-bootstrap/src/main/resources/templates/system/dept/tree.html
@@ -15,8 +15,8 @@
     }
 </style>
 <body class="hold-transition box box-main">
-<input id="treeId" name="treeId" type="hidden" th:value="${dept.deptId}"/>
-<input id="treeName" name="treeName" type="hidden" th:value="${dept.deptName}"/>
+<input id="treeId" name="treeId" type="hidden" th:value="${sysDept.deptId}"/>
+<input id="treeName" name="treeName" type="hidden" th:value="${sysDept.deptName}"/>
 <input id="viewPerm" name="viewPerm" type="hidden" th:value="${viewPerm}"/>
 <div class="wrapper">
     <div class="treeShowHideButton" onclick="$.tree.toggleSearch();">
