--- a/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/jobLogDetail.html
+++ b/sofa-admin/sofa-admin-job/src/main/resources/templates/ext/djob/jobLogDetail.html
@@ -56,7 +56,7 @@
 
 	<div class="content-wrapper" >
 		<section class="content">
-            <pre style="font-size:12px;position:relative;" >
+            <pre style="font-size:12px;position:relative;white-space:pre-wrap;" >
                 <div id="logConsole"></div>
                 <li class="fa fa-refresh fa-spin" style="font-size: 20px;float: left;" id="logConsoleRunning" ></li>
                 <div><hr><hr></div>
